# simplenote-mcp-server

./: .codecov.yml  .dockerignore  .editorconfig  .env.local  .gitignore  .markdownlint.yml  .markdownlintignore  .mypy_exclude  .pre-commit-config.yaml  .ruff.toml  BADGES_STATUS.md  CHANGELOG.md  CICD_DOCUMENTATION.md  CICD_FIXES_SUMMARY.md  CICD_STATUS.md  CICD_TROUBLESHOOTING.md  CLAUDE.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  DOCKER_PRD.md  DOCKER_TODO.md  Dockerfile  LICENSE  MANIFEST.in  PRD.md  PRE_COMMIT_README.md  PYTHON_VERSION_UPDATE_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  TODO.md  VALIDATION_STEPS.md  WORKFLOW_FIXES.md  debug_extract_title.py  docker-compose.dev.yml  docker-compose.yml  hashlib_patch.py  mcp_patch.py  mypy.ini  patch_pathlib.py  (+20 more)
.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ROADMAP.md  auto-merge.yml  badge-check.yml  ci.yml  code-quality.yml  debug-ci.yml  docs.yml  formatting-check.yml  performance.yml  python-tests.yml  release.yml  security.yml  test.yml
docs/: ARCHITECTURE.md  FORMATTING_CHECKLIST.md  TECHNICAL_DEBT.md  USER_GUIDES.md  error_categorization.md  linting_guide.md  linting_migration.md  structured_logging.md
scripts/: README.md  check-workflow-status.py  generate_code_quality_report.py  run-quality-checks.py  setup-dev-environment.py  validate-badges.py  validate-workflows.py  verify_linting_setup.sh
simplenote_mcp/: __init__.py
simplenote_mcp/docs/: monitoring_integration.md
simplenote_mcp/scripts/: README.md  analyze_logs.py  check_server_pid.sh  cleanup_servers.sh  config.sh  diagnose_api.py  error_examples.py  generate_test_coverage.py  log_format_test.py  logging_examples.py  monitoring_dashboard.py  release.sh  restart_claude.sh  test_tool_visibility.sh  verify_tools.sh  watch_logs.sh
simplenote_mcp/server/: __init__.py  cache.py  cache_utils.py  config.py  context.py  decorators.py  error_codes.py  errors.py  logging.py  mcp_types_compat.py  server.py  tool_handlers.py
simplenote_mcp/server/compat/: __init__.py
simplenote_mcp/server/monitoring/: README.md  __init__.py  metrics.py
simplenote_mcp/server/search/: __init__.py  engine.py  parser.py
simplenote_mcp/server/utils/: __init__.py  common.py  content_type.py
simplenote_mcp/tests/: README.md  benchmark_cache.py  conftest.py  monitor_server.py  run_tests.py  test_compat.py  test_content_type_hinting.py  test_error_categorization.py  test_helpers.py  test_mcp_client.py  test_note_operations.py  test_note_organization.py  test_pagination_and_cache.py  test_performance_monitoring.py  test_search.py  test_server_capabilities.py  test_structured_logging.py  test_tag_filter.py
simplenote_mcp/tests/unit/utils/: __init__.py  test_content_type.py
stubs/mcp/: __init__.pyi
stubs/mcp-stubs/: __init__.pyi
stubs/pytest-stubs/: __init__.pyi
stubs/pytest_asyncio-stubs/: __init__.pyi
stubs/simplenote/: __init__.pyi
tests/: TEST_SUMMARY.md  conftest.py  manual_test_demo.py  test_advanced_search.py  test_api_interaction.py  test_cache.py  test_cache_utils.py  test_decorators.py  test_errors.py  test_note_creation.py  test_performance.py  test_performance_monitoring.py  test_process_management.py  test_prompts.py  test_prompts_capabilities.py  test_search_edge_cases.py  test_search_integration.py  test_search_performance.py  test_simplenote_client.py  test_tag_filtering.py  test_title_search.py  test_title_search_integration.py  test_tool_handlers.py
utils/: logging_util.py  version_util.py
